--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -2,17 +2,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-
         <variable
             name="productViewModel"
-            type="test.com.mvvmunittest.ProductViewModel"/>
+            type="test.com.mvvmunittest.viewmodel.ProductViewModel"/>
     </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
         android:orientation="vertical"
-        tools:context=".ProductActivity">
+        tools:context=".view.ProductActivity">
 
         <TextView
             android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
             android:layout_marginTop="24dp"
             android:padding="10dp"
             android:layout_gravity="center"
-            android:text="購買"
+            android:text="buy"
             android:onClick="@{() -> productViewModel.buy()}"
             android:id="@+id/buy"
             />
